--- a/src/Components/Navigation/Navigation.css
+++ b/src/Components/Navigation/Navigation.css
@@ -5,7 +5,7 @@
   align-items: center;
   background-color: #4d4d4d;
   color: #fff;
-  padding: 10px 20px;
+  padding: 10px 40px;
 }
 
 .navStoreName {
@@ -15,11 +15,11 @@
 .navItems {
   width: 50%;
   margin-left: auto;
-  margin-right: 20px;
+  margin-right: 40px;
   font-size: 1.3rem;
   display: flex;
   justify-content: flex-end;
-  gap: 20px;
+  gap: 40px;
 }
 
 .link {
@@ -34,4 +34,21 @@
 .navCart {
   filter: invert(100%) sepia(14%) saturate(597%) hue-rotate(172deg)
     brightness(113%) contrast(106%);
+}
+.navCartPage {
+  position: relative;
+}
+.navContainer {
+  --item-counter-initial-width: 16px;
+}
+.navCartProductCount {
+  position: absolute;
+  color: #4d4d4d;
+  background-color: rgb(255, 255, 255);
+  border-radius: 25%;
+  padding: 0px 3px;
+  top: 18px;
+  left: 22px;
+  font-weight: bold;
+  text-align: center;
 }
