--- a/src/Components/Shop/Shop.css
+++ b/src/Components/Shop/Shop.css
@@ -3,5 +3,96 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+}
+.shopPageContent {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  gap: 10px;
+  padding: 0px 40px;
   background-color: rgb(223, 223, 223);
+}
+.shopPageContent h1 {
+  margin-top: 4%;
+  line-height: 2;
+  font-weight: bold;
+  font-size: 2rem;
+}
+.shopPageContent p {
+  font-size: 1.2rem;
+}
+/* Products styling */
+.shopProducts {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+.productCard {
+  flex: 1;
+  padding: 20px 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  max-width: 300px;
+  min-width: 150px;
+}
+.productImageContainer {
+  max-width: 300px;
+  min-width: 150px;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.productImage {
+  max-width: 100%;
+  max-height: 100%;
+}
+.productCard p {
+  text-align: center;
+}
+
+.howManyItems {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.howManyItems > * {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.howManyItems .minusProduct,
+.howManyItems .plusProduct {
+  border: 1px solid black;
+  height: 20px;
+  width: 40px;
+}
+.howManyItems .productAddCount {
+  border: 1px solid black;
+  height: 20px;
+  width: 20px;
+}
+
+.addProductToCart {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #3498db;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.addProductToCart:hover {
+  background-color: #2980b9;
+}
+
+.addProductToCart:active {
+  background-color: #1c4966;
 }
