--- a/src/Components/Shop/Shop.css
+++ b/src/Components/Shop/Shop.css
@@ -12,8 +12,8 @@
   padding: 0px 40px;
   background-color: rgb(223, 223, 223);
 }
-.shopPageContent h1 {
-  margin-top: 4%;
+.shopPageContent > h1 {
+  margin-top: 25px;
   line-height: 2;
   font-weight: bold;
   font-size: 2rem;
