--- a/src/main.css
+++ b/src/main.css
@@ -136,3 +136,18 @@ table {
   display: block;
   text-decoration: none;
 }
+
+/* Remove default styles for select elements */
+select {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  padding: 0;
+  margin: 0;
+  border: none;
+  background-color: transparent;
+  font-size: inherit;
+  color: inherit;
+  outline: none;
+  cursor: pointer;
+}
