--- a/src/Components/Shop/Shop.css
+++ b/src/Components/Shop/Shop.css
@@ -176,3 +176,34 @@
 #selectProducts:hover {
   background-color: rgb(90, 90, 90);
 }
+/* Page swiching buttons styling */
+
+.linksToOtherPages {
+  display: flex;
+  align-self: center;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  padding: 10px 0px 30px 0px;
+}
+.linksToOtherPages > p {
+  font-size: 1.5rem;
+}
+.linksToOtherPages > button {
+  display: inline-block;
+  padding: 6px 16px;
+  font-size: 24px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  background-color: #3498db;
+  color: #fff;
+  text-align: center;
+  text-decoration: none;
+  margin: 10px;
+  transition: background-color 0.3s;
+}
+
+.linksToOtherPages > button:hover {
+  background-color: #227ab4;
+}
