--- a/src/Components/Shopping-cart/Shopping-cart.css
+++ b/src/Components/Shopping-cart/Shopping-cart.css
@@ -5,3 +5,53 @@
   flex-direction: column;
   background-color: rgb(223, 223, 223);
 }
+.emptyCart {
+  align-self: center;
+  width: 60%;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 30%;
+  margin-bottom: 30%;
+  margin-top: 50px;
+  border-radius: 10px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+.emptyCart:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  border-color: rgba(0, 0, 0, 0.3);
+}
+.emptyCart > p {
+  font-size: 2rem;
+  text-align: center;
+}
+
+/* button style copied from homepage css */
+.shopButton {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #3498db;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+  margin-bottom: 40px;
+}
+
+.shopButton:hover {
+  background-color: #2980b9;
+}
+
+.shopButton:active {
+  background-color: #1c4966;
+}
+.shopButton .link {
+  text-decoration: none;
+}
