--- a/src/Components/Shopping-cart/Shopping-cart.css
+++ b/src/Components/Shopping-cart/Shopping-cart.css
@@ -1,10 +1,12 @@
 .shoppingCartPage {
+  min-height: 100%;
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   background-color: rgb(223, 223, 223);
 }
+
+/* Empty Cart Styling */
 .emptyCart {
   align-self: center;
   width: 60%;
@@ -54,4 +56,135 @@
 }
 .shopButton .link {
   text-decoration: none;
+}
+
+/* Not Empty Cart Styling */
+
+.cartItemsCheckout {
+  align-self: center;
+  display: flex;
+}
+.cartItems {
+  display: flex;
+  flex-direction: column;
+  padding: 20px 30px;
+  gap: 10px;
+}
+.cartProduct {
+  position: relative;
+  background-color: white;
+  display: flex;
+  flex: 1;
+  max-width: 800px;
+  min-width: 300px;
+  gap: 20px;
+  border-radius: 10px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+.cartProduct:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  border-color: rgba(0, 0, 0, 0.4);
+}
+.productImg {
+  height: 150px;
+  width: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px 30px;
+}
+.img {
+  max-width: 100%;
+  max-height: 100%;
+}
+.productInfo {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 30px 0px;
+  padding-right: 80px;
+}
+.productName {
+  font-size: 1.4rem;
+}
+.quantityPrice {
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+}
+.price {
+  font-size: 2rem;
+  font-weight: bold;
+  flex: 1;
+  text-align: center;
+  margin-left: 10px;
+}
+.howManyItems {
+  display: flex;
+  flex: 1;
+  align-items: center;
+  justify-content: center;
+}
+.howManyItems > * {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.howManyItems .minusProduct,
+.howManyItems .plusProduct {
+  border: 2px solid #3498db;
+  border-radius: 1px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.howManyItems .minusProduct:hover,
+.howManyItems .plusProduct:hover,
+.howManyItems .quantity:hover {
+  border-color: #2980b9;
+}
+
+.howManyItems .minusProduct,
+.howManyItems .plusProduct {
+  height: 35px;
+  width: 35px;
+  font-size: 1.7rem;
+  font-weight: 700;
+  font-family: monospace;
+}
+.howManyItems .quantity {
+  border: 2px solid #3498db;
+  border-radius: 1px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 1.4rem;
+  height: 35px;
+  width: 60px;
+  border-left: none;
+  border-right: none;
+}
+.removeFromCart {
+  position: absolute;
+  margin: 15px 15px;
+  padding: 3px 10px;
+  right: 5px;
+  background-color: #4d4d4d;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 1.5rem;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+.removeFromCart:hover {
+  background-color: #e73329;
+}
+.removeFromCart:active {
+  background-color: #a1211a;
 }
