--- a/src/Components/Shopping-cart/Shopping-cart.css
+++ b/src/Components/Shopping-cart/Shopping-cart.css
@@ -10,15 +10,14 @@
 .emptyCart {
   align-self: center;
   width: 60%;
-  height: 50%;
+  height: 25vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 30%;
-  margin-bottom: 30%;
   margin-top: 50px;
   border-radius: 10px;
+  gap: 80px;
   border: 1px solid rgba(0, 0, 0, 0.2);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
@@ -29,6 +28,7 @@
 .emptyCart > p {
   font-size: 2rem;
   text-align: center;
+  margin: 0px 10px;
 }
 
 /* button style copied from homepage css */
