--- a/src/Components/Navigation/Navigation.css
+++ b/src/Components/Navigation/Navigation.css
@@ -1,3 +1,11 @@
+#root {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(223, 223, 223);
+}
+
 /* Navigation Style */
 .navContainer {
   display: flex;
