--- a/src/Components/Shopping-cart/Shopping-cart.css
+++ b/src/Components/Shopping-cart/Shopping-cart.css
@@ -9,8 +9,8 @@
 /* Empty Cart Styling */
 .emptyCart {
   align-self: center;
-  width: 60%;
-  height: 25vw;
+  width: 70vw;
+  min-height: 30vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -29,6 +29,7 @@
   font-size: 2rem;
   text-align: center;
   margin: 0px 10px;
+  padding: 10px 10px;
 }
 
 /* button style copied from homepage css */
@@ -44,7 +45,7 @@
   font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s, color 0.3s;
-  margin-bottom: 40px;
+  margin-bottom: 90px;
 }
 
 .shopButton:hover {
