--- a/src/Components/Shop/Shop.css
+++ b/src/Components/Shop/Shop.css
@@ -111,6 +111,7 @@
   font-family: monospace;
 }
 .howManyItems .productAddCount {
+  margin: 0;
   border: 2px solid #3498db;
   border-radius: 1px;
   text-align: center;
