--- a/src/Components/Shopping-cart/Shopping-cart.css
+++ b/src/Components/Shopping-cart/Shopping-cart.css
@@ -145,6 +145,7 @@
 
 .howManyItems .minusProduct,
 .howManyItems .plusProduct {
+  all: unset;
   border: 2px solid #3498db;
   border-radius: 1px;
   text-align: center;
@@ -169,6 +170,7 @@
   font-family: monospace;
 }
 .howManyItems .quantity {
+  margin: 0;
   border: 2px solid #3498db;
   border-radius: 1px;
   text-align: center;
