--- a/src/Components/Shopping-cart/Shopping-cart.css
+++ b/src/Components/Shopping-cart/Shopping-cart.css
@@ -10,14 +10,14 @@
 .emptyCart {
   align-self: center;
   width: 70vw;
-  min-height: 30vw;
+  min-height: 40vw;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   margin-top: 50px;
   border-radius: 10px;
-  gap: 80px;
+  gap: 20px;
   border: 1px solid rgba(0, 0, 0, 0.2);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
@@ -28,7 +28,7 @@
 .emptyCart > p {
   font-size: 2rem;
   text-align: center;
-  margin: 0px 10px;
+  margin: 10px 10px;
   padding: 10px 10px;
 }
 
@@ -45,7 +45,7 @@
   font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s, color 0.3s;
-  margin-bottom: 90px;
+  margin-bottom: 20px;
 }
 
 .shopButton:hover {
