--- a/src/Components/Shop/Shop.css
+++ b/src/Components/Shop/Shop.css
@@ -6,12 +6,24 @@
   padding: 0px 40px;
   background-color: rgb(223, 223, 223);
 }
-.shopPageContent > h1 {
+.shopMain {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
   margin-top: 25px;
+  gap: 15px;
+}
+.shopMain > h1 {
   line-height: 2;
   font-weight: bold;
   font-size: 2rem;
 }
+.searchProducts {
+  margin-left: auto;
+  margin-right: auto;
+  padding-right: 64px; /* 64 h1 Shop width */
+}
+
 .shopPageContent p {
   font-size: 1.2rem;
 }
