--- a/src/Components/Navigation/Navigation.css
+++ b/src/Components/Navigation/Navigation.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   background-color: rgb(223, 223, 223);
+  margin: 0 auto;
 }
 
 /* Navigation Style */
@@ -18,10 +19,10 @@
 
 .navStoreName {
   font-size: 2rem;
+  text-wrap: nowrap;
 }
 
 .navItems {
-  width: 50%;
   margin-left: auto;
   margin-right: 40px;
   font-size: 1.3rem;
@@ -59,4 +60,42 @@
   left: 22px;
   font-weight: bold;
   text-align: center;
+}
+@media (max-width: 520px) {
+  .navContainer {
+    padding: 10px 30px;
+  }
+  .navItems {
+    gap: 20px;
+    margin-left: auto;
+    margin-right: 20px;
+    font-size: 1.3rem;
+  }
+}
+
+@media (max-width: 430px) {
+  .navContainer {
+    padding: 10px 30px;
+  }
+  .navItems {
+    gap: 10px;
+    font-size: 1.1rem;
+  }
+  .navStoreName {
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 380px) {
+  .navContainer {
+    padding: 10px 20px;
+  }
+  .navItems {
+    gap: 8px;
+    font-size: 1rem;
+    margin-right: 8px;
+  }
+  .navStoreName {
+    font-size: 1.5rem;
+  }
 }
