--- a/src/Components/Shopping-cart/Shopping-cart.css
+++ b/src/Components/Shopping-cart/Shopping-cart.css
@@ -70,12 +70,10 @@
 .cartItems {
   display: flex;
   flex-direction: column;
-  padding: 20px 30px;
+  padding: 20px 20px;
   gap: 15px;
 }
-
 .checkout {
-  width: 0px;
   font-size: 2rem;
   margin-top: 20px;
   white-space: nowrap;
@@ -84,9 +82,7 @@
   position: relative;
   background-color: white;
   display: flex;
-  flex: 1;
-  max-width: 800px;
-  min-width: 300px;
+  width: 700px;
   gap: 20px;
   border-radius: 10px;
   border: 1px solid rgba(0, 0, 0, 0.2);
@@ -150,7 +146,6 @@
   border-radius: 1px;
   text-align: center;
   text-decoration: none;
-  font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s, color 0.3s;
 }
@@ -199,4 +194,92 @@
 }
 .removeFromCart:active {
   background-color: #a1211a;
+}
+
+@media (max-width: 950px) {
+  .cartProduct {
+    width: 500px;
+  }
+}
+
+@media (max-width: 750px) {
+  .cartItems {
+    padding-right: 10px;
+  }
+  .checkout {
+    font-size: 1.5rem;
+  }
+}
+@media (max-width: 650px) {
+  .cartProduct {
+    width: 300px;
+    gap: 10px;
+  }
+  .productName {
+    font-size: 0.9rem;
+    width: 70%;
+  }
+  .productInfo {
+    width: 200px;
+    padding-right: 0px;
+  }
+  .productImg {
+    padding: 0px 10px;
+    width: 80px;
+  }
+  .removeFromCart {
+    margin: 8px 5px;
+    padding: 2px 8px;
+    font-size: 1rem;
+  }
+  .howManyItems .minusProduct,
+  .howManyItems .plusProduct {
+    height: 25px;
+    width: 25px;
+    font-size: 1.4rem;
+  }
+  .howManyItems .quantity {
+    font-size: 1.2rem;
+    height: 25px;
+    width: 30px;
+  }
+  .price {
+    font-size: 1.4rem;
+  }
+}
+
+@media (max-width: 450px) {
+  .checkout {
+    font-size: 1.1rem;
+  }
+  .cartProduct {
+    width: 200px;
+    gap: 3px;
+  }
+  .productName {
+    font-size: 0.7rem;
+  }
+
+  .productImg {
+    width: 60px;
+  }
+  .removeFromCart {
+    margin: 4px 1px;
+    font-size: 0.8rem;
+  }
+  .howManyItems .minusProduct,
+  .howManyItems .plusProduct {
+    height: 15px;
+    width: 15px;
+    font-size: 0.9rem;
+  }
+  .howManyItems .quantity {
+    font-size: 0.9rem;
+    height: 15px;
+    width: 25px;
+  }
+  .price {
+    font-size: 0.8rem;
+    margin-left: 0;
+  }
 }
